CWT implementation (#21)